<resources>
    <string name="app_name">Miniproject</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="action_settings">Settings</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_password2">Re-enter Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="addr1">Address Line 1</string>
    <string name="addr2">Address Line 2</string>
    <string name="addr3">Address Line 3</string>
    <string name="addr4">Phone number</string>
</resources>
